fix java bining